--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -8,9 +8,12 @@
     <%= e.label :street, 'Event Location' %>:
     <%= e.text_field :street %><br />
     <span id='master_row'>
-        <%= e.label :dates, 'Event Date' %>:
+        <%= e.label :dates, 'Event date 1' %>:
         <%= text_field_tag 'event[dates][]' %><br />
     </span>
+    <%= e.label :dates, 'Event date 2' %>:
+    <%= text_field_tag 'event[dates][]' %><br />
     <%=link_to_function 'add another', "clone_master_row()" %>
+    <%= e.submit 'Next'%>
   <% end %>
 
