--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New Event</h1>
-
+<%=error_messages_for 'event'%>
+ 
  <% form_for @event do |e| %>
     <%= e.label :email, 'Your Email' %>:
     <%= e.text_field :email %><br />
